# oghma-bot

./: .gitignore  .graphqlconfig  .prettierignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
apps/oghma-admin/: Cargo.toml
apps/oghma-admin/src/: cli.rs  main.rs
apps/oghma-admin/src/commands/: download_schema.rs  mod.rs  upload_schema.rs
apps/oghma-admin/src/outputs/: mod.rs
apps/oghma-bot/: Cargo.toml
apps/oghma-bot/src/: main.rs
apps/oghma-bot/src/commands/: mod.rs
graphql/: addDiscordNickname.graphql  docker-compose.yml  queryNicknames.graphql  queryUser.graphql  schema.graphql
graphql/related-scripts/: update-schema.ps1
libs/oghma_graphql/: Cargo.toml
libs/oghma_graphql/src/: lib.rs
libs/oghma_graphql/src/entities/: discord_nickname.rs  discord_user.rs  discord_voice_channel.rs  mod.rs
libs/oghma_graphql/src/graphql/: addDiscordNickname.graphql  add_discord_nickname.graphql  add_discord_nickname.rs  add_discord_user.graphql  add_discord_user.rs  discord_nickname.graphql  discord_nickname.rs  discord_user.graphql  discord_user.rs  discord_voice_channel.graphql  discord_voice_channel.rs  find_discord_user.graphql  find_discord_user.rs  introspection.graphql  mod.rs  queryNicknames.graphql  query_discord_nicknames.graphql  query_discord_nicknames.rs  query_discord_users.graphql  query_discord_users.rs  schema.graphql
libs/oghma_graphql/src/requests/: mod.rs
libs/oghma_graphql/src/utils/: mod.rs
libs/oghma_logger/: Cargo.toml
libs/oghma_logger/src/: lib.rs
src/: .graphqlconfig  downloaded-schema.graphql  main.rs  query.gql  schema.graphql
src/environment/: mod.rs
src/logger/: mod.rs
