[package]
name = "oghma-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0"
log = "0"
serenity = {version ="0", default-features = false,  features =["http", "model", "client", "gateway", "rustls_backend"]}
tokio = { version = "1", features = ["rt-multi-thread"] }
dotenv = "0"
