[package]
name = "oghma-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0"
env_logger = "0"
log = "0"
serde = "1"
clap = {version="3", features = ["derive"]}
oghma_graphql = {path= "../../libs/oghma_graphql" }
reqwest = { version = "0", features = ["json", "serde_json"] }
tokio = "1"
oghma_logger = {path="../../libs/oghma_logger"}
graphql_client = "0"
comfy-table = "6"