[package]
name = "oghma-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.200"
clap = {version="3.2.25", features = ["derive"]}
oghma_graphql = {path= "../../libs/oghma_graphql" }
reqwest = { version = "0.12.4", features = ["json", "serde_json"] }
tokio = "1.37.0"
oghma_logger = {path="../../libs/oghma_logger"}
graphql_client = "0.14.0"
comfy-table = "7.0.0"