[package]
name = "oghma_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.200"
rust-embed = "6.8.1"
graphql_client = "0.14.0"
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
